# codeadvent2017

./: .gitignore
codeadvent17/: codeadvent17.sln
codeadvent17/codeadvent17/: CMakeLists.txt  CorruptionChecksum.cpp  InverseCaptcha.cpp  InverseCaptcha.h  Makefile  build.ninja  codeadvent17.cpp  codeadvent17.vcxproj  day01_InverseCaptcha.cpp  day01_InverseCaptcha.h  day02_CorruptionChecksum.cpp  day02_CorruptionChecksum.h  day03_SpiralMemory.cpp  day03_SpiralMemory.h  day04_HighEntropyPassphrases.cpp  day04_HighEntropyPassphrases.h  day05_TwistyTrampolines.cpp  day05_TwistyTrampolines.h  day06_MemoryReallocation.cpp  day06_MemoryReallocation.h  day07_RecurisveCircus.cpp  day07_RecurisveCircus.h  day07_RecursiveCircus.cpp  day07_RecursiveCircus.h  day08_RegisterProcessor.cpp  day08_RegisterProcessor.h  day09_StreamProcessing.cpp  day09_StreamProcessing.h  day10_KnotHash.cpp  day10_KnotHash.h  day11_HexEd.cpp  day11_HexEd.h  day12_DigitalPlumber.cpp  day12_DigitalPlumber.h  day13_PacketScanners.cpp  day13_PacketScanners.h  day14_DiskDefragmentation.cpp  day14_DiskDefragmentation.h  day15_DuelingGenerators.cpp  day15_DuelingGenerators.h  (+9 more)
